<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pokemon"
            type="com.kencur.pokedex.model.Pokemon" />

        <variable
            name="vm"
            type="com.kencur.pokedex.ui.info.InfoViewModel" />

        <variable
            name="onBackPressed"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:descendantFocusability="blocksDescendants">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="6dp"
                android:translationZ="100dp"
                app:clickListener="@{onBackPressed}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/header"
                app:srcCompat="@drawable/ic_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/app_name"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:translationZ="100dp"
                app:layout_constraintStart_toEndOf="@id/arrow"
                app:layout_constraintTop_toTopOf="@id/arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:text="@{pokemon.idString}"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="@id/header"
                app:layout_constraintTop_toTopOf="@id/header"
                tools:text="#001" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                android:text="@{pokemon.nameString}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:text="Bulbasaur" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/poke_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:src="@drawable/ic_favorite_border"
                android:tag="@string/not_favorite"
                app:clickListener="@{vm.onFavoriteClick}"
                app:isFavorite="@{vm.isFavorite}"
                app:layout_constraintBottom_toBottomOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintTop_toTopOf="@id/name" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@color/colorPrimary"
                android:elevation="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginBottom="20dp"
                android:scaleType="center"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:paletteImage="@{pokemon.sprites.other.home.frontDefault}"
                app:paletteView="@{header}"
                app:toast="@{vm.toastMessage}" />

            <com.skydoves.androidribbon.RibbonRecyclerView
                android:id="@+id/ribbonRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:bindPokemonTypes="@{pokemon.types}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:ribbon_recycler_orientation="horizontal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weight"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{pokemon.weightString}"
                android:textSize="21sp"
                app:layout_constraintEnd_toStartOf="@id/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ribbonRecyclerView"
                tools:text="24.0 kg" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/height"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{pokemon.heightString}"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weight"
                app:layout_constraintTop_toTopOf="@id/weight"
                tools:text="11 cm" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                app:layout_constraintEnd_toStartOf="@id/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight"
                tools:text="Weight" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weight"
                app:layout_constraintTop_toBottomOf="@id/height" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_title"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/base_stats"
                android:textColor="@color/black"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_title" />

            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/hp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stats_title" />

            <TextView
                android:id="@+id/hpString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:text="@{pokemon.hpString}"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/hp"
                app:layout_constraintStart_toEndOf="@id/hp"
                app:layout_constraintTop_toTopOf="@id/hp"
                tools:text="80" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_hp"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/hp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/hpString"
                app:layout_constraintTop_toTopOf="@id/hp"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/colorPrimary"
                app:progressView_max="@{pokemon.maxHp}"
                app:progressView_progress="@{pokemon.hp}"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/atk"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hp" />

            <TextView
                android:id="@+id/attackString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:text="@{pokemon.attackString}"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/attack"
                app:layout_constraintStart_toEndOf="@id/hp"
                app:layout_constraintTop_toTopOf="@id/attack"
                tools:text="80" />

            <com.skydoves.progressview.ProgressView
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/attack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progress_hp"
                app:layout_constraintTop_toTopOf="@id/attack"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/colorPrimary"
                app:progressView_max="@{pokemon.maxAttack}"
                app:progressView_progress="@{pokemon.attack}"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/def"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attack" />

            <TextView
                android:id="@+id/defenseString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:text="@{pokemon.defenseString}"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/defense"
                app:layout_constraintStart_toEndOf="@id/hp"
                app:layout_constraintTop_toTopOf="@id/defense"
                tools:text="80" />

            <com.skydoves.progressview.ProgressView
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/defense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progress_hp"
                app:layout_constraintTop_toTopOf="@id/defense"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/colorPrimary"
                app:progressView_max="@{pokemon.maxDefense}"
                app:progressView_progress="@{pokemon.defense}"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/spd"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/defense" />

            <TextView
                android:id="@+id/speedString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:text="@{pokemon.speedString}"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/speed"
                app:layout_constraintStart_toEndOf="@id/hp"
                app:layout_constraintTop_toTopOf="@id/speed"
                tools:text="80" />

            <com.skydoves.progressview.ProgressView
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progress_hp"
                app:layout_constraintTop_toTopOf="@id/speed"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/colorPrimary"
                app:progressView_max="@{pokemon.maxSpeed}"
                app:progressView_progress="@{pokemon.speed}"
                app:progressView_radius="12dp" />


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:gone="@{!vm.loading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>